--- a/vista/noticia.twig
+++ b/vista/noticia.twig
@@ -81,6 +81,7 @@
       <div class="seccion-comentarios">
       <h2>Comentarios</h2>
 
+      {% if usuario is defined %}
       <div class="navitem comentario">
         <form method="post" action="" >
           <input type="text" name="comentario" maxlength="140" required
@@ -88,7 +89,7 @@
           <input class="boton" type="submit" value="Comentar"/>
         </form>
       </div>
-
+      {% endif %}
 
       <div class="navitem comentario">
         <div class="cabecera-comentario">
