--- a/css/estilo_moderador.css
+++ b/css/estilo_moderador.css
@@ -85,6 +85,7 @@ textarea:focus {
   margin: 5% 2% 2%;
   background: rgba(80, 80, 80, 0.5);
   max-height: 20em;
+  height: fit-content;
 }
 
 .listado-noticias-gestor {
